# infake

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  config.go  config.sample.yaml  consumer.go  gen.go  glide.yaml  lockedsource.go  point.go  series.go  stringtemplate.go  timerange.go  timerange_test.go  value.go  value_test.go  variable.go  variable_test.go
infake/: BUILD.bazel  main.go
infake/cmd/: BUILD.bazel  root.go
timerange/: BUILD.bazel  timerange.go  timerange_test.go
