load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ypomortsev/infake/infake",
    visibility = ["//visibility:private"],
    deps = ["//infake/cmd:go_default_library"],
)

go_binary(
    name = "infake",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
